name:                mars-rover
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/balajisivaraman/mars-rover-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Balaji Sivaraman
maintainer:          balaji@balajisivaraman.com
copyright:           2016 Balaji Sivaraman
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MarsRover
                     , DataTypes
  build-depends:       base >= 4.7 && < 5
                     , lens >= 4.14
  default-language:    Haskell2010

executable mars-rover-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mars-rover
  default-language:    Haskell2010

test-suite mars-rover-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mars-rover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/balajisivaraman/mars-rover-haskell
